--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,17 @@
       </dependency>
     </dependencies>
 
+<dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.1.0</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+
+
     <build>
         <plugins>
             <plugin>
